// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-DotsIcon"
  color="primary"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-primary"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-primary"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-primary"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-DotsIcon"
  color="secondary-one"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-secondary-one"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-secondary-one"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-secondary-one"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-DotsIcon"
  color="secondary-two"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-secondary-two"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-secondary-two"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-secondary-two"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  className="lucid-DotsIcon"
  color="secondary-three"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-secondary-three"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-secondary-three"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-secondary-three"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  className="lucid-DotsIcon"
  color="success"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-success"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-success"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-success"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  className="lucid-DotsIcon"
  color="neutral-dark"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-neutral-dark"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-neutral-dark"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-neutral-dark"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;

exports[`DotsIcon [common] example testing should match snapshot(s) for 1.default 7`] = `
<Icon
  className="lucid-DotsIcon"
  color="neutral-light"
  style={
    Object {
      "display": "block",
      "margin": "10px",
    }
  }
>
  <circle
    className="lucid-DotsIcon-color-neutral-light"
    cx="8"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-neutral-light"
    cx="14.5"
    cy="8"
    r="1"
  />
  <circle
    className="lucid-DotsIcon-color-neutral-light"
    cx="1.5"
    cy="8"
    r="1"
  />
</Icon>
`;
